@@ -23,7 +23,7 @@ how widely this will be used, but hopefully it will be useful for somebody.
 
   require "nifti"
   # Read file:
-  obj = Nifti::NObject.new("some_file.nii")
+  obj = NIFTI::NObject.new("some_file.nii")
   # Display some key information about the file:
 	puts obj.header['sform_code_descr']
 	=> "NIFTI_XFORM_SCANNER_ANAT"
@@ -38,7 +38,7 @@ There are plenty of NIfTI libraries around (the canonical
 [nifticlib](http://niftilib.sourceforge.net/), which includes c, python and
 matlab interfaces, and Matlab interfaces in the Mathworks image processing
 toolbox (IPT) and [Toolbox for
-Nifti](http://www.mathworks.com/matlabcentral/fileexchange/8797-tools-for-nifti-and-analyze-image)
+NIfTI](http://www.mathworks.com/matlabcentral/fileexchange/8797-tools-for-nifti-and-analyze-image)
 by Jimmy Shen. 
 
 This library does not intend to replace them, but rather to provide a few ruby
@@ -81,7 +81,7 @@ parser like nokogiri (using the AFNI ecode of 4 to select it from the list of
 extended headers, and assuming that there's only 1 AFNI header per file):
 
     require 'nifti'; require 'nokogiri'
-    obj = Nifti::NObject.new('./T1.nii')
+    obj = NIFTI::NObject.new('./T1.nii')
     afni_extended_header = obj.extended_header.select{|ext| ext[:ecode] == 4 }[:data]
     afni_xml = Nokogiri::XML(xml)
     history = afni_xml.xpath("//AFNI_atr[@atr_name='HISTORY_NOTE']").first.children.first.text
@@ -91,7 +91,7 @@ extended headers, and assuming that there's only 1 AFNI header per file):
 Again, this is a trivial example, but shows one usage of the library. Say you
 want to take find the mean and std dev of the entire image.
 
-    obj = Nifti::NObject.new('./T1.nii', :narray => true)
+    obj = NIFTI::NObject.new('./T1.nii', :narray => true)
     mean = obj.image.mean
     stddev = obj.image.stddev
 
