@@ -1,9 +1,9 @@
 require File.dirname(__FILE__) + '/../lib/nifti'
 require 'custom_matchers'
 
-include Nifti
+include NIFTI
 
-module Nifti
+module NIFTI
   # Fixture file to use for specs/tests
   NIFTI_TEST_FILE1 = File.join(File.dirname(__FILE__), 'fixtures/3plLoc.nii')
 end
